--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "ajv": "^6.5.3",
     "aphrodite": "^2.2.3",
+    "bootstrap": "^4.1.3",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-modal": "^3.6.1",
